--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,16 @@
 language: ruby
-rvm:
+rvm: 
 - 1.9.2
 - 1.9.3
 - 2.0.0
-deploy:
+deploy: 
   provider: rubygems
-  api_key:
+  api_key: 
     secure: IYAAlcL23reMuVdFE61OmokCP2HtKgwCN14CJ8uMGynpfvjJTZ6R4L4yfFzXbN3Pej4clqM30NK3fbuP8vRh21zEfKgrC1k9UDzHnW8FzEv75+j92LzUDl9OqnHMJsZyrk9W8WtIfFkI10CDhkfSYaQSbpIU822vvxYJQEhO4+o=
   gem: gloader
-  "on":
+  "on": 
     tags: true
     repo: bendodd/gloader
+env: 
+  global: 
+    secure: H3EiZH1KxkSSoo5hwD6POzBayx9B4SLMfB2K3IpRmrso8/upbHzv4rfa2Ex1O/qwjYruT7GRFrzuk8nU4w6Yk0L66Fz//ScMCICZjQ4DFZrg0T+baax0I67zz//gZmjs1CoL0H9azPY0q518LbKpytk79TwgckJELDYwbjMdF7Q=
